--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ asgiref==3.7.2
 Django==5.0.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
+mysqlclient==2.2.4
+pillow==10.2.0
 PyJWT==2.8.0
+python-dotenv==1.0.1
 pytz==2024.1
 sqlparse==0.4.4
