--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==42.0.5
 defusedxml==0.8.0rc2
+dj-database-url==2.1.0
 Django==5.0.2
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
@@ -23,4 +24,5 @@ requests-oauthlib==1.3.1
 social-auth-app-django==5.4.0
 social-auth-core==4.5.3
 sqlparse==0.4.4
+typing_extensions==4.10.0
 urllib3==2.2.1
