--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,25 @@ asgiref==3.7.2
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==42.0.5
 defusedxml==0.8.0rc2
 dj-database-url==2.1.0
 Django==5.0.2
+django-cors-headers==4.3.1
+django-rest-swagger==2.2.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 djoser==2.2.2
 idna==3.6
+itypes==1.2.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 mysqlclient==2.2.4
 oauthlib==3.2.2
+openapi-codec==1.3.2
 pillow==10.2.0
 pycparser==2.21
 PyJWT==2.8.0
@@ -21,8 +29,10 @@ python3-openid==3.2.0
 pytz==2024.1
 requests==2.31.0
 requests-oauthlib==1.3.1
+simplejson==3.19.2
 social-auth-app-django==5.4.0
 social-auth-core==4.5.3
 sqlparse==0.4.4
 typing_extensions==4.10.0
+uritemplate==4.1.1
 urllib3==2.2.1
